Adição de alguns comentários e refatoração dos métodos POST e DELETE dos services.